--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # AI Daily 依赖清单
 
-# Claude API SDK
-anthropic>=0.40.0
+# LLM API SDK (OpenAI 兼容格式，支持硅基流动等)
+openai>=1.0.0
 
 # RSS 解析
 feedparser>=6.0.10
