--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,11 @@
 # 复制此文件为 .env 并填入实际值
 
 # ============================================================================
-# Claude API 配置（使用智谱代理）
+# LLM API 配置（硅基流动）
 # ============================================================================
-ZHIPU_API_KEY=your_zhipu_api_key_here
-ANTHROPIC_BASE_URL=https://open.bigmodel.cn/api/anthropic
+LLM_API_KEY=your_siliconflow_api_key_here
+LLM_BASE_URL=https://api.siliconflow.cn/v1
+LLM_MODEL=zai-org/GLM-4.6V
 
 # ============================================================================
 # AI Daily 邮件通知配置（可选）
